--- a/panels/power/cc-power-panel.ui
+++ b/panels/power/cc-power-panel.ui
@@ -52,25 +52,17 @@
     </data>
   </object>
   <template class="CcPowerPanel" parent="CcPanel">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
     <child>
-      <object class="HdyPreferencesPage">
-        <property name="visible">True</property>
+      <object class="AdwPreferencesPage">
         <child>
-          <object class="HdyPreferencesGroup" id="battery_section">
-            <property name="visible">True</property>
+          <object class="AdwPreferencesGroup" id="battery_section">
             <property name="title" translatable="yes">Battery</property>
-            <accessibility>
-              <relation target="battery_listbox" type="label-for"/>
-            </accessibility>
             <child>
               <object class="GtkListBox" id="battery_listbox">
-                <property name="visible">True</property>
                 <property name="selection-mode">none</property>
                 <signal name="keynav-failed" handler="keynav_failed_cb" object="CcPowerPanel" swapped="yes"/>
                 <accessibility>
-                  <relation target="battery_section" type="labelled-by"/>
+                  <relation name="labelled-by">battery_section</relation>
                 </accessibility>
                 <style>
                   <class name="content"/>
@@ -80,19 +72,14 @@
           </object>
         </child>
         <child>
-          <object class="HdyPreferencesGroup" id="device_section">
-            <property name="visible">True</property>
+          <object class="AdwPreferencesGroup" id="device_section">
             <property name="title" translatable="yes">Devices</property>
-            <accessibility>
-              <relation target="device_listbox" type="label-for"/>
-            </accessibility>
             <child>
               <object class="GtkListBox" id="device_listbox">
-                <property name="visible">True</property>
                 <property name="selection-mode">none</property>
                 <signal name="keynav-failed" handler="keynav_failed_cb" object="CcPowerPanel" swapped="yes"/>
                 <accessibility>
-                  <relation target="device_section" type="labelled-by"/>
+                  <relation name="labelled-by">device_section</relation>
                 </accessibility>
                 <style>
                   <class name="content"/>
@@ -102,21 +89,17 @@
           </object>
         </child>
         <child>
-          <object class="HdyPreferencesGroup" id="power_profile_section">
+          <object class="AdwPreferencesGroup" id="power_profile_section">
             <property name="visible">False</property>
             <property name="title" translatable="yes">Power Mode</property>
             <property name="description" translatable="yes">Affects system performance and power usage.</property>
-            <accessibility>
-              <relation target="power_profile_listbox" type="label-for"/>
-            </accessibility>
             <child>
               <object class="GtkListBox" id="power_profile_listbox">
-                <property name="visible">True</property>
                 <property name="selection-mode">none</property>
                 <signal name="keynav-failed" handler="keynav_failed_cb" object="CcPowerPanel" swapped="yes"/>
                 <signal name="row-activated" handler="power_profiles_row_activated_cb" object="CcPowerPanel" swapped="yes"/>
                 <accessibility>
-                  <relation target="power_profile_section" type="labelled-by"/>
+                  <relation name="labelled-by">power_profile_section</relation>
                 </accessibility>
                 <style>
                   <class name="content"/>
@@ -137,17 +120,14 @@
           </object>
         </child>
         <child>
-          <object class="HdyPreferencesGroup" id="power_saving_section">
-            <property name="visible">True</property>
+          <object class="AdwPreferencesGroup" id="power_saving_section">
             <property name="title" translatable="yes">Power Saving Options</property>
             <child>
-              <object class="HdyActionRow" id="als_row">
-                <property name="visible">True</property>
+              <object class="AdwActionRow" id="als_row">
                 <property name="title" translatable="yes">Automatic Screen Brightness</property>
                 <property name="subtitle" translatable="yes">Screen brightness adjusts to the surrounding light.</property>
                 <child>
                   <object class="GtkSwitch" id="als_switch">
-                    <property name="visible">True</property>
                     <property name="valign">center</property>
                     <signal name="notify::active" handler="als_switch_changed_cb" object="CcPowerPanel" swapped="yes"/>
                   </object>
@@ -155,22 +135,19 @@
               </object>
             </child>
             <child>
-              <object class="HdyActionRow" id="dim_screen_row">
-                <property name="visible">True</property>
+              <object class="AdwActionRow" id="dim_screen_row">
                 <property name="title" translatable="yes">Dim Screen</property>
                 <property name="subtitle" translatable="yes">Reduces the screen brightness when the computer is inactive.</property>
                 <property name="activatable_widget">dim_screen_switch</property>
                 <child>
                   <object class="GtkSwitch" id="dim_screen_switch">
-                    <property name="visible">True</property>
                     <property name="valign">center</property>
                   </object>
                 </child>
               </object>
             </child>
             <child>
-              <object class="HdyComboRow" id="blank_screen_row">
-                <property name="visible">True</property>
+              <object class="AdwComboRow" id="blank_screen_row">
                 <property name="title" translatable="yes">Screen _Blank</property>
                 <property name="subtitle" translatable="yes">Turns the screen off after a period of inactivity.</property>
                 <property name="use_underline">True</property>
@@ -178,7 +155,7 @@
               </object>
             </child>
             <child>
-              <object class="HdyActionRow" id="power_saver_low_battery_row">
+              <object class="AdwActionRow" id="power_saver_low_battery_row">
                 <property name="visible">False</property>
                 <property name="title" translatable="yes">Automatic Power Saver</property>
                 <property name="subtitle" translatable="yes">Enables power saver mode when battery is low.</property>
@@ -186,14 +163,13 @@
                 <property name="activatable_widget">power_saver_low_battery_switch</property>
                 <child>
                   <object class="GtkSwitch" id="power_saver_low_battery_switch">
-                    <property name="visible">True</property>
                     <property name="valign">center</property>
                   </object>
                 </child>
               </object>
             </child>
             <child>
-              <object class="HdyActionRow" id="automatic_suspend_row">
+              <object class="AdwActionRow" id="automatic_suspend_row">
                 <property name="visible">False</property>
                 <property name="title" translatable="yes">_Automatic Suspend</property>
                 <property name="subtitle" translatable="yes">Pauses the computer after a period of inactivity.</property>
@@ -202,7 +178,6 @@
                 <signal name="activated" handler="automatic_suspend_row_activated_cb" swapped="yes"/>
                 <child>
                   <object class="GtkLabel" id="automatic_suspend_label">
-                    <property name="visible">True</property>
                     <property name="halign">end</property>
                     <signal name="mnemonic-activate" handler="automatic_suspend_label_mnemonic_activate_cb" object="CcPowerPanel" swapped="yes"/>
                   </object>
@@ -212,11 +187,9 @@
           </object>
         </child>
         <child>
-          <object class="HdyPreferencesGroup" id="general_section">
-            <property name="visible">True</property>
-            <property name="title" translatable="yes">Suspend &amp; Power Button</property>
+          <object class="AdwPreferencesGroup" id="general_section">
             <child>
-              <object class="HdyComboRow" id="power_button_row">
+              <object class="AdwComboRow" id="power_button_row">
                 <property name="visible">False</property>
                 <property name="title" translatable="yes">Po_wer Button Behavior</property>
                 <property name="use_underline">True</property>
@@ -224,14 +197,13 @@
               </object>
             </child>
             <child>
-              <object class="HdyActionRow" id="battery_percentage_row">
+              <object class="AdwActionRow" id="battery_percentage_row">
                 <property name="visible">False</property>
                 <property name="title" translatable="yes">Show Battery _Percentage</property>
                 <property name="use_underline">True</property>
                 <property name="activatable_widget">battery_percentage_switch</property>
                 <child>
                   <object class="GtkSwitch" id="battery_percentage_switch">
-                    <property name="visible">True</property>
                     <property name="valign">center</property>
                   </object>
                 </child>
@@ -263,21 +235,19 @@
   </object>
 
   <object class="GtkDialog" id="automatic_suspend_dialog">
-    <property name="can_focus">False</property>
-    <property name="border_width">5</property>
     <property name="title" translatable="yes">Automatic Suspend</property>
-    <property name="type_hint">dialog</property>
     <property name="resizable">False</property>
     <property name="use_header_bar">1</property>
-    <child internal-child="vbox">
+    <property name="hide-on-close">True</property>
+    <child>
       <object class="GtkBox">
-        <property name="can_focus">False</property>
+        <property name="margin_start">6</property>
+        <property name="margin_end">6</property>
+        <property name="margin_top">6</property>
+        <property name="margin_bottom">6</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">2</property>
         <child>
           <object class="GtkGrid">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="margin_start">12</property>
             <property name="margin_end">6</property>
             <property name="margin_top">12</property>
@@ -286,150 +256,101 @@
             <property name="column_spacing">6</property>
             <child>
               <object class="GtkLabel" id="suspend_on_ac_label">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="margin_top">12</property>
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">_Plugged In</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">suspend_on_ac_switch</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">2</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkLabel" id="suspend_on_battery_label">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">On _Battery Power</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">suspend_on_battery_switch</property>
+                <layout>
+                  <property name="column">0</property>
+                  <property name="row">0</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkSwitch" id="suspend_on_battery_switch">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
                 <property name="halign">end</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="row">0</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">2</property>
-                <property name="top_attach">0</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkComboBoxText" id="suspend_on_battery_delay_combo">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="entry_text_column">0</property>
                 <property name="id_column">1</property>
                 <property name="model">time_liststore</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="row">1</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">2</property>
-                <property name="top_attach">1</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkLabel" id="suspend_on_battery_delay_label">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="margin_start">20</property>
                 <property name="xalign">1</property>
                 <property name="label" translatable="yes">Delay</property>
                 <property name="mnemonic_widget">suspend_on_battery_delay_combo</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">1</property>
+                </layout>
                 <style>
                   <class name="dim-label"/>
                 </style>
               </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">1</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkSwitch" id="suspend_on_ac_switch">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
                 <property name="halign">end</property>
                 <property name="margin_top">12</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="row">2</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">2</property>
-                <property name="top_attach">2</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkComboBoxText" id="suspend_on_ac_delay_combo">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="entry_text_column">0</property>
                 <property name="id_column">1</property>
                 <property name="model">time_liststore</property>
+                <layout>
+                  <property name="column">2</property>
+                  <property name="row">3</property>
+                </layout>
               </object>
-              <packing>
-                <property name="left_attach">2</property>
-                <property name="top_attach">3</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
             </child>
             <child>
               <object class="GtkLabel">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="margin_start">20</property>
                 <property name="xalign">1</property>
                 <property name="label" translatable="yes">Delay</property>
                 <property name="mnemonic_widget">suspend_on_ac_delay_combo</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">3</property>
+                </layout>
                 <style>
                   <class name="dim-label"/>
                 </style>
               </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">3</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
-              </packing>
             </child>
           </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
         </child>
       </object>
     </child>
