multitasking: Port to GTK4

--- a/panels/multitasking/cc-multitasking-panel.ui
+++ b/panels/multitasking/cc-multitasking-panel.ui
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="CcMultitaskingPanel" parent="CcPanel">
-    <property name="visible">True</property>
     <child>
       <object class="GtkScrolledWindow">
-        <property name="visible">true</property>
         <property name="hscrollbar-policy">never</property>
         <child>
-          <object class="HdyClamp">
-            <property name="visible">True</property>
+          <object class="AdwClamp">
             <property name="maximum-size">600</property>
             <property name="tightening-threshold">400</property>
             <property name="margin_top">32</property>
@@ -18,16 +15,12 @@
 
             <child>
               <object class="GtkBox">
-                <property name="visible">true</property>
-                <property name="can-focus">false</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">12</property>
 
                 <!-- General -->
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">true</property>
-                    <property name="can-focus">true</property>
                     <property name="label" translatable="yes">General</property>
                     <property name="xalign">0.0</property>
                     <attributes>
@@ -38,8 +31,6 @@
 
                 <child>
                   <object class="GtkListBox">
-                    <property name="visible">true</property>
-                    <property name="can-focus">true</property>
                     <property name="selection-mode">none</property>
                     <property name="margin-bottom">24</property>
 
@@ -50,7 +41,6 @@
                     <!-- Hot Corner -->
                     <child>
                       <object class="CcMultitaskingRow">
-                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="activatable-widget">hot_corner_switch</property>
                         <property name="title" translatable="yes">_Hot Corner</property>
@@ -58,18 +48,20 @@
                         <property name="use_underline">True</property>
                         <child>
                           <object class="GtkSwitch" id="hot_corner_switch">
-                            <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="valign">center</property>
                           </object>
                         </child>
                         <child type="artwork">
-                          <object class="GtkImage">
-                            <property name="visible">True</property>
+                          <object class="GtkPicture">
                             <property name="hexpand">True</property>
                             <property name="halign">center</property>
-                            <property name="margin">18</property>
-                            <property name="resource">/org/gnome/control-center/multitasking/assets/hot-corner.svg</property>
+                            <property name="margin-top">18</property>
+                            <property name="margin-bottom">18</property>
+                            <property name="margin-start">18</property>
+                            <property name="margin-end">18</property>
+                            <property name="can-shrink">False</property>
+                            <property name="file">resource:///org/gnome/control-center/multitasking/assets/hot-corner.svg</property>
                           </object>
                         </child>
                       </object>
@@ -78,7 +70,6 @@
                     <!-- Active Screen Edges -->
                     <child>
                       <object class="CcMultitaskingRow">
-                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="activatable-widget">active_screen_edges_switch</property>
                         <property name="title" translatable="yes">_Active Screen Edges</property>
@@ -86,18 +77,20 @@
                         <property name="use_underline">True</property>
                         <child>
                           <object class="GtkSwitch" id="active_screen_edges_switch">
-                            <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="valign">center</property>
                           </object>
                         </child>
                         <child type="artwork">
-                          <object class="GtkImage">
-                            <property name="visible">True</property>
+                          <object class="GtkPicture">
                             <property name="hexpand">True</property>
                             <property name="halign">center</property>
-                            <property name="margin">18</property>
-                            <property name="resource">/org/gnome/control-center/multitasking/assets/active-screen-edges.svg</property>
+                            <property name="margin-top">18</property>
+                            <property name="margin-bottom">18</property>
+                            <property name="margin-start">18</property>
+                            <property name="margin-end">18</property>
+                            <property name="can-shrink">False</property>
+                            <property name="file">resource:///org/gnome/control-center/multitasking/assets/active-screen-edges.svg</property>
                           </object>
                         </child>
                       </object>
@@ -109,8 +102,6 @@
                 <!-- Workspaces -->
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">true</property>
-                    <property name="can-focus">true</property>
                     <property name="label" translatable="yes">Workspaces</property>
                     <property name="xalign">0.0</property>
                     <attributes>
@@ -121,8 +112,6 @@
 
                 <child>
                   <object class="GtkListBox">
-                    <property name="visible">true</property>
-                    <property name="can-focus">true</property>
                     <property name="selection-mode">none</property>
                     <property name="margin-bottom">18</property>
 
@@ -133,15 +122,13 @@
                     <!-- Dynamic Workspaces -->
                     <child>
                       <object class="CcMultitaskingRow">
-                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="activatable-widget">dynamic_workspaces_radio</property>
                         <property name="title" translatable="yes">_Dynamic workspaces</property>
                         <property name="subtitle" translatable="yes">Automatically removes empty workspaces.</property>
                         <property name="use_underline">True</property>
                         <child type="prefix">
-                          <object class="GtkRadioButton" id="dynamic_workspaces_radio">
-                            <property name="visible">True</property>
+                          <object class="GtkCheckButton" id="dynamic_workspaces_radio">
                             <property name="can_focus">True</property>
                             <property name="valign">center</property>
                           </object>
@@ -152,15 +139,13 @@
                     <!-- Fixed Number of Workspaces -->
                     <child>
                       <object class="CcMultitaskingRow">
-                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="activatable-widget">fixed_workspaces_radio</property>
                         <property name="title" translatable="yes">_Fixed number of workspaces</property>
                         <property name="subtitle" translatable="yes">Specify a number of permanent workspaces.</property>
                         <property name="use_underline">True</property>
                         <child type="prefix">
-                          <object class="GtkRadioButton" id="fixed_workspaces_radio">
-                            <property name="visible">True</property>
+                          <object class="GtkCheckButton" id="fixed_workspaces_radio">
                             <property name="can_focus">True</property>
                             <property name="valign">center</property>
                             <property name="group">dynamic_workspaces_radio</property>
@@ -172,7 +157,6 @@
                     <!-- Number of Workspaces -->
                     <child>
                       <object class="CcMultitaskingRow">
-                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="sensitive" bind-source="fixed_workspaces_radio" bind-property="active" bind-flags="default|sync-create" />
                         <property name="activatable-widget">number_of_workspaces_spin</property>
@@ -180,7 +164,6 @@
                         <property name="use_underline">True</property>
                         <child>
                           <object class="GtkSpinButton" id="number_of_workspaces_spin">
-                            <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="valign">center</property>
                             <property name="adjustment">workspaces_adjustment</property>
@@ -195,8 +178,6 @@
                 <!-- Multi-Monitor -->
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">true</property>
-                    <property name="can-focus">true</property>
                     <property name="label" translatable="yes">Multi-Monitor</property>
                     <property name="xalign">0.0</property>
                     <attributes>
@@ -207,8 +188,6 @@
 
                 <child>
                   <object class="GtkListBox">
-                    <property name="visible">true</property>
-                    <property name="can-focus">true</property>
                     <property name="selection-mode">none</property>
                     <property name="margin-bottom">18</property>
 
@@ -219,25 +198,26 @@
                     <!-- Primary Display -->
                     <child>
                       <object class="CcMultitaskingRow">
-                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="activatable-widget">workspaces_primary_display_radio</property>
                         <property name="title" translatable="yes">Workspaces on _primary display only</property>
                         <property name="use_underline">True</property>
                         <child type="prefix">
-                          <object class="GtkRadioButton" id="workspaces_primary_display_radio">
-                            <property name="visible">True</property>
+                          <object class="GtkCheckButton" id="workspaces_primary_display_radio">
                             <property name="can_focus">True</property>
                             <property name="valign">center</property>
                           </object>
                         </child>
                         <child type="artwork">
-                          <object class="GtkImage">
-                            <property name="visible">True</property>
+                          <object class="GtkPicture">
                             <property name="hexpand">True</property>
                             <property name="halign">center</property>
-                            <property name="margin">18</property>
-                            <property name="resource">/org/gnome/control-center/multitasking/assets/workspaces-primary-display.svg</property>
+                            <property name="margin-top">18</property>
+                            <property name="margin-bottom">18</property>
+                            <property name="margin-start">18</property>
+                            <property name="margin-end">18</property>
+                            <property name="can-shrink">False</property>
+                            <property name="file">resource:///org/gnome/control-center/multitasking/assets/workspaces-primary-display.svg</property>
                           </object>
                         </child>
                       </object>
@@ -246,26 +226,27 @@
                     <!-- Span Displays -->
                     <child>
                       <object class="CcMultitaskingRow">
-                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="activatable-widget">workspaces_span_displays_radio</property>
                         <property name="title" translatable="yes">Workspaces on all d_isplays</property>
                         <property name="use_underline">True</property>
                         <child type="prefix">
-                          <object class="GtkRadioButton" id="workspaces_span_displays_radio">
-                            <property name="visible">True</property>
+                          <object class="GtkCheckButton" id="workspaces_span_displays_radio">
                             <property name="can_focus">True</property>
                             <property name="valign">center</property>
                             <property name="group">workspaces_primary_display_radio</property>
                           </object>
                         </child>
                         <child type="artwork">
-                          <object class="GtkImage">
-                            <property name="visible">True</property>
+                          <object class="GtkPicture">
                             <property name="hexpand">True</property>
                             <property name="halign">center</property>
-                            <property name="margin">18</property>
-                            <property name="resource">/org/gnome/control-center/multitasking/assets/workspaces-span-displays.svg</property>
+                            <property name="margin-top">18</property>
+                            <property name="margin-bottom">18</property>
+                            <property name="margin-start">18</property>
+                            <property name="margin-end">18</property>
+                            <property name="can-shrink">False</property>
+                            <property name="file">resource:///org/gnome/control-center/multitasking/assets/workspaces-span-displays.svg</property>
                           </object>
                         </child>
                       </object>
@@ -277,8 +258,6 @@
                 <!-- Application Switching -->
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">true</property>
-                    <property name="can-focus">true</property>
                     <property name="label" translatable="yes">Application Switching</property>
                     <property name="xalign">0.0</property>
                     <attributes>
@@ -289,8 +268,6 @@
 
                 <child>
                   <object class="GtkListBox">
-                    <property name="visible">true</property>
-                    <property name="can-focus">true</property>
                     <property name="selection-mode">none</property>
                     <property name="margin-bottom">18</property>
 
@@ -301,14 +278,12 @@
                     <!-- All Workspaces -->
                     <child>
                       <object class="CcMultitaskingRow">
-                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="activatable-widget">all_workspaces_radio</property>
                         <property name="title" translatable="yes">Include applications from all _workspaces</property>
                         <property name="use_underline">True</property>
                         <child type="prefix">
-                          <object class="GtkRadioButton" id="all_workspaces_radio">
-                            <property name="visible">True</property>
+                          <object class="GtkCheckButton" id="all_workspaces_radio">
                             <property name="can_focus">True</property>
                             <property name="valign">center</property>
                           </object>
@@ -319,14 +294,12 @@
                     <!-- Current Workspace -->
                     <child>
                       <object class="CcMultitaskingRow">
-                        <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="activatable-widget">current_workspace_radio</property>
                         <property name="title" translatable="yes">Include applications from the _current workspace only</property>
                         <property name="use_underline">True</property>
                         <child type="prefix">
-                          <object class="GtkRadioButton" id="current_workspace_radio">
-                            <property name="visible">True</property>
+                          <object class="GtkCheckButton" id="current_workspace_radio">
                             <property name="can_focus">True</property>
                             <property name="valign">center</property>
                             <property name="group">all_workspaces_radio</property>
