--- a/panels/multitasking/cc-multitasking-row.ui
+++ b/panels/multitasking/cc-multitasking-row.ui
@@ -1,77 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <template class="CcMultitaskingRow" parent="HdyPreferencesRow">
+  <template class="CcMultitaskingRow" parent="AdwPreferencesRow">
     <property name="activatable">False</property>
     <accessibility>
-      <relation target="title" type="labelled-by"/>
+      <relation name="labelled-by">title</relation>
     </accessibility>
     <child>
       <object class="GtkBox" id="header">
-        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="valign">center</property>
-        <property name="visible">True</property>
         <style>
           <class name="header"/>
         </style>
 
         <child>
           <object class="GtkBox">
-            <property name="can_focus">False</property>
             <property name="spacing">12</property>
             <property name="valign">center</property>
             <property name="vexpand">True</property>
-            <property name="visible">True</property>
 
             <child>
               <object class="GtkBox" id="prefixes">
-                <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
                 <property name="spacing">12</property>
                 <property name="visible">False</property>
               </object>
             </child>
             <child>
               <object class="GtkImage" id="image">
-                <property name="no_show_all">True</property>
                 <property name="pixel_size">32</property>
                 <property name="valign">center</property>
+                <property name="visible">False</property>
               </object>
             </child>
             <child>
               <object class="GtkBox" id="title_box">
-                <property name="can_focus">False</property>
                 <property name="halign">start</property>
-                <property name="no_show_all">True</property>
                 <property name="orientation">vertical</property>
                 <property name="valign">center</property>
-                <property name="visible">True</property>
                 <style>
                   <class name="title"/>
                 </style>
                 <child>
                   <object class="GtkLabel" id="title">
-                    <property name="can_focus">False</property>
                     <property name="ellipsize">end</property>
                     <property name="halign">start</property>
                     <property name="hexpand">True</property>
                     <property name="label" bind-source="CcMultitaskingRow" bind-property="title" bind-flags="sync-create"/>
                     <property name="lines">1</property>
-                    <property name="visible">True</property>
                     <property name="wrap">True</property>
                     <property name="wrap-mode">word-char</property>
                     <property name="xalign">0</property>
                     <style>
                       <class name="title"/>
                     </style>
-                    <accessibility>
-                      <relation target="CcMultitaskingRow" type="label-for"/>
-                    </accessibility>
                   </object>
                 </child>
                 <child>
                   <object class="GtkLabel" id="subtitle">
-                    <property name="can_focus">False</property>
                     <property name="ellipsize">end</property>
                     <property name="halign">start</property>
                     <property name="hexpand">True</property>
@@ -88,14 +73,9 @@
             </child>
             <child>
               <object class="GtkBox" id="suffixes">
-                <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
                 <property name="spacing">12</property>
                 <property name="visible">False</property>
               </object>
-              <packing>
-                <property name="pack-type">end</property>
-              </packing>
             </child>
 
           </object>
@@ -103,8 +83,6 @@
 
         <child>
           <object class="GtkBox" id="artwork_box">
-            <property name="can_focus">False</property>
-            <property name="no_show_all">True</property>
             <property name="visible">False</property>
             <property name="hexpand">True</property>
             <property name="margin-top">12</property>
