--- a/panels/applications/cc-action-row.ui
+++ b/panels/applications/cc-action-row.ui
@@ -1,33 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="CcActionRow" parent="GtkListBoxRow">
-    <property name="visible">True</property>
-    <property name="can-focus">True</property>
     <property name="activatable">False</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">1</property>
-        <property name="border-width">12</property>
+        <property name="margin-top">12</property>
+        <property name="margin-bottom">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkBox">
-            <property name="visible">1</property>
             <property name="orientation">vertical</property>
             <property name="spacing">4</property>
             <child>
               <object class="GtkLabel" id="title">
-                <property name="visible">1</property>
                 <property name="xalign">0</property>
                 <property name="hexpand">1</property>
                 <property name="ellipsize">end</property>
               </object>
-              <packing>
-                <property name="expand">1</property>
-              </packing>
             </child>
             <child>
               <object class="GtkLabel" id="subtitle">
-                <property name="visible">1</property>
                 <property name="xalign">0</property>
                 <property name="hexpand">1</property>
                 <property name="ellipsize">end</property>
@@ -40,7 +34,6 @@
         </child>
         <child>
           <object class="GtkButton" id="button">
-            <property name="visible">1</property>
             <property name="valign">center</property>
             <signal name="clicked" handler="clicked_cb" swapped="yes"/>
           </object>
