--- a/panels/applications/cc-info-row.ui
+++ b/panels/applications/cc-info-row.ui
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="CcInfoRow" parent="GtkListBoxRow">
-    <property name="visible">True</property>
-    <property name="can-focus">True</property>
     <property name="activatable">False</property>
     <child>
       <object class="GtkBox">
-        <property name="visible">1</property>
-        <property name="border-width">12</property>
+        <property name="margin-top">12</property>
+        <property name="margin-bottom">12</property>
+        <property name="margin-start">12</property>
+        <property name="margin-end">12</property>
         <property name="spacing">12</property>
         <child>
           <object class="GtkLabel" id="title">
-            <property name="visible">1</property>
             <property name="xalign">0</property>
             <property name="hexpand">1</property>
             <property name="ellipsize">end</property>
@@ -19,7 +18,6 @@
         </child>
         <child>
           <object class="GtkLabel" id="info">
-            <property name="visible">1</property>
             <property name="valign">center</property>
             <style>
               <class name="dim-label"/>
@@ -28,6 +26,7 @@
         </child>
         <child>
           <object class="GtkImage" id="expander">
+            <property name="visible">False</property>
             <property name="valign">center</property>
             <property name="icon-name">pan-end-symbolic</property>
             <style>
