usage: Port to GTK4

--- a/panels/usage/cc-usage-panel.ui
+++ b/panels/usage/cc-usage-panel.ui
@@ -2,14 +2,11 @@
 <!-- Generated with glade 3.18.1 -->
 <interface>
   <template class="CcUsagePanel" parent="CcPanel">
-    <property name="visible">True</property>
     <child>
       <object class="GtkScrolledWindow">
-        <property name="visible">true</property>
         <property name="hscrollbar-policy">never</property>
         <child>
-          <object class="HdyClamp">
-            <property name="visible">True</property>
+          <object class="AdwClamp">
             <property name="margin_top">32</property>
             <property name="margin_bottom">32</property>
             <property name="margin_start">12</property>
@@ -18,14 +15,12 @@
             <!-- File History -->
             <child>
               <object class="GtkBox">
-                <property name="visible">true</property>
                 <property name="orientation">vertical</property>
                 <property name="hexpand">1</property>
                 <property name="spacing">12</property>
 
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">true</property>
                     <property name="label" translatable="yes">File History</property>
                     <property name="xalign">0</property>
                     <attributes>
@@ -36,7 +31,6 @@
 
                 <child>
                   <object class="GtkLabel" id="usage_description_label">
-                    <property name="visible">true</property>
                     <property name="margin-bottom">12</property>
                     <property name="label" translatable="yes">File history keeps a record of files that you have used. This information is shared between applications, and makes it easier to find files that you might want to use.</property>
                     <property name="wrap">1</property>
@@ -47,18 +41,18 @@
 
                 <child>
                   <object class="GtkListBox" id="usage_list_box">
-                    <property name="visible">true</property>
                     <property name="can-focus">1</property>
                     <property name="selection-mode">none</property>
+                    <style>
+                      <class name="content" />
+                    </style>
                     <child>
-                      <object class="HdyActionRow">
-                        <property name="visible">true</property>
+                      <object class="AdwActionRow">
                         <property name="title" translatable="yes">File H_istory</property>
                         <property name="activatable-widget">recently_used_switch</property>
                         <property name="use-underline">true</property>
                         <child>
                           <object class="GtkSwitch" id="recently_used_switch">
-                            <property name="visible">true</property>
                             <property name="halign">end</property>
                             <property name="valign">center</property>
                           </object>
@@ -67,28 +61,26 @@
                     </child>
                     <child>
                       <object class="GtkListBoxRow">
-                        <property name="visible">true</property>
                         <child>
                           <object class="GtkBox">
-                            <property name="visible">true</property>
-                            <property name="margin">12</property>
+                            <property name="margin-top">12</property>
+                            <property name="margin-bottom">12</property>
+                            <property name="margin-start">12</property>
+                            <property name="margin-end">12</property>
                             <child>
                               <object class="GtkLabel">
-                                <property name="visible">true</property>
                                 <property name="label" translatable="yes">File _History Duration</property>
+                                <property name="hexpand">True</property>
+                                <property name="vexpand">True</property>
                                 <property name="use_underline">1</property>
                                 <property name="mnemonic_widget">retain_history_combo</property>
                                 <property name="sensitive" bind-source="retain_history_combo" bind-property="sensitive"/>
                                 <property name="xalign">0</property>
                                 <property name="valign">center</property>
                               </object>
-                              <packing>
-                                <property name="expand">1</property>
-                              </packing>
                             </child>
                             <child>
                               <object class="GtkComboBoxText" id="retain_history_combo">
-                                <property name="visible">true</property>
                                 <property name="valign">center</property>
                                 <property name="entry_text_column">0</property>
                                 <property name="model">retain_history_model</property>
@@ -107,14 +99,12 @@
 
                 <child>
                   <object class="GtkBox">
-                    <property name="visible">true</property>
                     <property name="hexpand">true</property>
                     <property name="halign">end</property>
                     <property name="homogeneous">true</property>
                     <property name="spacing">12</property>
                     <child>
                       <object class="GtkButton" id="clear_recent_button">
-                        <property name="visible">true</property>
                         <property name="valign">center</property>
                         <property name="label" translatable="yes">_Clear History…</property>
                         <property name="use_underline">1</property>
@@ -130,7 +120,6 @@
                 <!-- Trash & Temporary Files -->
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">true</property>
                     <property name="margin-top">18</property>
                     <property name="label" translatable="yes">Trash &amp; Temporary Files</property>
                     <property name="xalign">0</property>
@@ -141,7 +130,6 @@
                 </child>
                 <child>
                   <object class="GtkLabel">
-                    <property name="visible">true</property>
                     <property name="label" translatable="yes">Trash and temporary files can sometimes include personal or sensitive information. Automatically deleting them can help to protect privacy.</property>
                     <property name="wrap">1</property>
                     <property name="max-width-chars">50</property>
@@ -150,18 +138,18 @@
                 </child>
                 <child>
                   <object class="GtkListBox" id="trash_list_box">
-                    <property name="visible">true</property>
                     <property name="can-focus">1</property>
                     <property name="selection-mode">none</property>
+                    <style>
+                      <class name="content" />
+                    </style>
                     <child>
-                      <object class="HdyActionRow">
-                        <property name="visible">true</property>
+                      <object class="AdwActionRow">
                         <property name="title" translatable="yes">Automatically Delete _Trash Content</property>
                         <property name="activatable-widget">purge_trash_switch</property>
                         <property name="use-underline">true</property>
                         <child>
                           <object class="GtkSwitch" id="purge_trash_switch">
-                            <property name="visible">true</property>
                             <property name="halign">end</property>
                             <property name="valign">center</property>
                           </object>
@@ -169,14 +157,12 @@
                       </object>
                     </child>
                     <child>
-                      <object class="HdyActionRow">
-                        <property name="visible">true</property>
+                      <object class="AdwActionRow">
                         <property name="title" translatable="yes">Automatically Delete Temporary _Files</property>
                         <property name="activatable-widget">purge_temp_switch</property>
                         <property name="use-underline">true</property>
                         <child>
                           <object class="GtkSwitch" id="purge_temp_switch">
-                            <property name="visible">true</property>
                             <property name="halign">end</property>
                             <property name="valign">center</property>
                           </object>
@@ -185,28 +171,26 @@
                     </child>
                     <child>
                       <object class="GtkListBoxRow">
-                        <property name="visible">true</property>
                         <child>
                           <object class="GtkBox">
-                            <property name="visible">true</property>
-                            <property name="margin">12</property>
+                            <property name="margin-top">12</property>
+                            <property name="margin-bottom">12</property>
+                            <property name="margin-start">12</property>
+                            <property name="margin-end">12</property>
                             <child>
                               <object class="GtkLabel">
-                                <property name="visible">true</property>
                                 <property name="label" translatable="yes">Automatically Delete _Period</property>
                                 <property name="use_underline">1</property>
+                                <property name="hexpand">True</property>
+                                <property name="vexpand">True</property>
                                 <property name="mnemonic_widget">purge_after_combo</property>
                                 <property name="sensitive" bind-source="purge_after_combo" bind-property="sensitive"/>
                                 <property name="xalign">0</property>
                                 <property name="valign">center</property>
                               </object>
-                              <packing>
-                                <property name="expand">1</property>
-                              </packing>
                             </child>
                             <child>
                               <object class="GtkComboBoxText" id="purge_after_combo">
-                                <property name="visible">true</property>
                                 <property name="valign">center</property>
                                 <property name="entry_text_column">0</property>
                                 <property name="model">purge_after_model</property>
@@ -225,14 +209,12 @@
 
                 <child>
                   <object class="GtkBox">
-                    <property name="visible">true</property>
                     <property name="hexpand">true</property>
                     <property name="halign">end</property>
                     <property name="homogeneous">true</property>
                     <property name="spacing">12</property>
                     <child>
                       <object class="GtkButton" id="purge_trash_button">
-                        <property name="visible">true</property>
                         <property name="halign">end</property>
                         <property name="valign">center</property>
                         <property name="label" translatable="yes">_Empty Trash…</property>
@@ -244,7 +226,6 @@
                     </child>
                     <child>
                       <object class="GtkButton" id="purge_temp_button">
-                        <property name="visible">true</property>
                         <property name="halign">end</property>
                         <property name="valign">center</property>
                         <property name="label" translatable="yes">_Delete Temporary Files…</property>
